assets/css/style.css
/* Add google fonts here */
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-weight: 300;
    margin-top: 10px;
}

header {
    height: 7vw;
}

h1,
h2 {
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    color: #a34c1f;
    font-weight: 100;
}

#logo {
    text-decoration: none;
    font-size: 200%;
    float: left;
    margin-left: 5%;
}

#menu,
#logo {
    line-height: 5vw;
    margin-bottom: 5px;
}

#menu li {
    float: right;
    list-style-type: none;
    padding: 0 30px;
    color: #000109;
    border-radius: 5px;
}


#menu li:hover {
    background-color: #a34c1f;
    color: #a3b2ad;
}

#menu a {
    text-decoration: none;
    font-family: Roboto, sans-serif;
    font-size: 110%;
    padding: 0.25rem;
    color: inherit;
    display: inline-block;
    width: 100%;
}

#hero-outer {
    position: relative;
    width: 100%;
    height: 30vw;
    overflow: hidden;
}

#hero-image {
    width: 100%;
    height: 30vw;
    background: url('../images/hero-image.webp') no-repeat center center;
    background-size: cover;

}

#intro-text {
    letter-spacing: .1vw;
    height: 10vw;
    width: 30vw;
    background-color: rgba(54, 49, 44, .9);
    border-radius: 5px;
    position: absolute;
    bottom: 10vw;
    left: 33%;
    color: #a3b2ad;
    padding: 1%;
    text-align: justify;
}

#intro-text h2 {
    text-align: center;
    font-size: 3vw;
    margin-bottom: 10px;
}

#intro-text h3 {
    font-family: roboto, sans-serif;
    font-size: 1.5vw;
}

#video-container {
    display: grid;
    width: 33vw;
    grid-template-columns: auto auto auto;
    justify-content: center;
    margin: auto;
    border: 3px solid #6b7471;
    border-radius: 3px;
    margin-top: 1%;
}

#factory-video {
    width: 33vw;
    height: 20vw;    
}


#card-section {
    background-color: #6b7471;
    height: 30vw;
    padding: 5vw 0;
    margin: 1% 0;

}

#card-container {
    display: grid;
    grid-template-columns: auto auto auto;
    text-align: center;
    justify-content: space-evenly;
}

.card {
    border-radius: 5px;
    box-shadow: 3px 4px 4px #000;
    height: 30vw;
    width: 20vw;
}

#card1 {
    background-image: url(../images/card1-imageB.webp);
}

#card2 {
    background-image: url(../images/card2-imageB.webp);
}

#card3 {
    background-image: url(../images/card3-imageB.webp);
}

.card-data {
    background-color: rgba(147, 157, 153, .6);
    height: 30vw;
    width: 20vw;
    text-align: center;
    position: absolute;
}

.card-data h2 {
    color: #fff;
    font-size: 3vw;
}

.card-data p,
li {
    color: #000;
    font-family: roboto, 'Times New Roman', Times, serif;
    font-size: 1.5vw;
    font-weight: 600;
    text-align: justify;
    padding: 0.2vw 0.7vw;
}

.card-data li {
    margin-left: 2vw;
}


/* css for gallery */

#photo-section {
    background: url(../images/hero-image.webp);
    background-size: cover;
    height: 90vw;
    padding-top: 2vw;
    width: 100%;

}

#photos {
    clear: both;
    display: grid;
    grid-template-columns: auto auto auto auto;
    column-gap: 0.5vw;
    row-gap: 2vw;
    margin-left: 2vw;
}

.tile {
    display: inline-block;
    height: 23vw;
    width: 20vw;
    padding: 1vw;
    border: 1px solid #000;
    box-shadow: 3px 4px 4px #000;
    background-color: #fff;
}

.tile img {
    height: 20vw;
    width: 20vw;
    border-radius: 5px;
    object-fit: contain;
}

.tile p {
    min-height: 1vw;
    max-height: 3vw;
    max-width: 20vw;
    margin: .1vw 0;
    padding: 0 .5vw;
    font-size: 1.2rem;
    font-family: Roboto, 'Times New Roman', Times, serif;
}

/* css for contact form */


#form-section {
    width: 100%;
    height: 50vw;
    background: url('../images/hero-image.webp') no-repeat center center;
    background-size: cover;    
    overflow: hidden;
    
}

#contact-form {
    width: 33vw;
    height: 33vw;
    top: 15vw;
    left: 5vw;
    padding: 1vw;
    background-color: rgba(54, 49, 44, .9);
    position: absolute;
    color: #a3b2ad;
    font-weight: bold;
    display: block;
}

form h2 {
    margin-bottom: 1vw;
}

label {
    width: 100%;
    display: block;
    font-family: roboto, 'Times New Roman', Times, serif;

}
input, textarea {
    background-color: rgba(147, 157, 153, .6);
    border: 2px solid #a3b2ad;
    border-radius: 5px;
    width: 100%;
    height: 2vw;
    margin-bottom: 1vw;
    color: #000;
    font-weight: bold;
    font-family: roboto, 'Times New Roman', Times, serif;
    display: block;

}

textarea {
    height: 8vw;
    background-color: rgba(147, 157, 153, .6);
    resize: none;
}

#submit-btn {
    position: absolute;
    max-width: 33vw;
    bottom: 1vw;
    color: #000;
    font-weight: bold;
    font-family: roboto, 'Times New Roman', Times, serif;
}

input:hover, textarea:hover {    
    background-color: #a3b2ad;
    color: #000;
    font-family: roboto, 'Times New Roman', Times, serif;
}

#map {
    width: 35vw;
    height: 35vw;
    top: 15vw;
    right: 5vw;
    position: absolute;
    background-color: #fff;
}

#map iframe {
    height: 90%;
    width: 100%;
}

#address {
    height: 2vw;
    background-color: inherit;
    position: absolute;
    bottom: 0.5vw;
    width: 100%;
    text-align: center;
}


/* css for footer */


footer {
    padding-top: 1vw;
    height: 5vw;
    background-color: #a34c1f;
    font-family: roboto, 'Times New Roman', Times, serif;

}

footer a,
p {
    color: #000109;
    text-decoration: none;
    text-align: center;
}

#socials {
    text-align: center;
    max-width: 33vw;
    margin-left: 33vw;
}

#socials>li {
    display: inline;
}

#socials i {
    padding: 1vw;
    font-size: 1.5vw;
}

#socials a {
    text-decoration: none;
}

/* media queries for smaller screen sizes - 600px and 280px */

